--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 discord-py = "^2.4.0"
+flask = "^3.0.3"
+replit = "^4.0.0"
 
 
 [build-system]
