--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ python = "^3.10"
 discord-py = "^2.4.0"
 flask = "^3.0.3"
 replit = "^4.0.0"
+icalendar = "^5.0.13"
+ics = "^0.7.2"
+requests = "^2.32.3"
+validators = "^0.33.0"
 
 
 [build-system]
